Add lesson course, facebook events and new students section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@
 </head>
 
 <body class="landing-page">
+
+
+
+  <div id="fb-root"></div>
+  <script>
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
+
+
+
+
+
+
   <nav class="navbar navbar-danger navbar-transparent navbar-absolute">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -41,8 +61,8 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="#">
-              <i class="material-icons">apps</i> Link 1
+            <a href="lesson-course.html">
+              <i class="material-icons">apps</i> Lesson Course
             </a>
           </li>
 
@@ -180,7 +200,7 @@
             adipisci quod odio ducimus, eos. Rem, magnam quod consequuntur similique eligendi et, labore,
             aspernatur id nam dignissimos, optio.</h4>
           <br />
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="btn btn-danger btn-raised btn-lg">
+          <a href="https://www.youtube.com/watch?v=aSdQn2mFn1I" target="_blank" class="btn btn-danger btn-raised btn-lg">
             <i class="fa fa-play"></i> Watch video
           </a>
         </div>
@@ -502,6 +522,85 @@
 
 
 
+    <div class="cd-section" id="blogs">
+
+      <!--     *********    BLOGS 4      *********      -->
+
+      <div class="blogs-4" id="blogs-4">
+
+        <div class="container">
+          <div class="row">
+
+            <div class="col-md-8 col-md-offset-2">
+              <h2 class="title text-center">初めての方へ</h2>
+
+              <br />
+
+              <div class="card card-plain card-blog">
+                <div class="card-image">
+                  <a href="#pablo">
+                    <img class="img img-raised" src="assets/img/bg5.jpg" />
+                  </a>
+                </div>
+
+                <h6 class="category text-info">For new students</h6>
+
+                <h3 class="card-title">
+                  Lorem ipsum dolor sit amet.
+                </h3>
+
+                <h5 class="card-description">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste consequatur sequi, praesentium omnis hic
+                  porro similique id possimus assumenda eos fuga quam accusamus aliquid rerum, explicabo,
+                  nam reiciendis odit error!
+                </h5>
+
+                <a href="#" class="btn btn-primary"> Read More</a>
+              </div>
+
+              <!-- <div class="card card-plain card-blog">
+                <div class="card-image">
+                  <a href="#pablo">
+                    <img class="img img-raised" src="assets/img/examples/blog6.jpg" />
+                  </a>
+                </div>
+
+                <h6 class="category text-success">Lifestyle</h6>
+
+                <h3 class="card-title">
+                  <a href="#pablo">We will breathe clean air and exercise</a>
+                </h3>
+
+                <h5 class="card-description">
+                  Don't be scared of the truth because we need to restart the human foundation in truth And I love you
+                  like Kanye loves Kanye I love Rick Owens’ bed design but the back is too high for the
+                  beams and angle of the ceiling I also wanted to point out that it’s the first album
+                  to go number 1 off of streaming...
+                </h5>
+
+                <a href="#pablo" class="btn btn-primary btn-round"> Read More</a>
+              </div> -->
+
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+      <!--     *********    END BLOGS 4      *********      -->
+
+    </div>
+
+
+
+
+
+
+
+
+
+
     <div class="cd-section" id="testimonials">
 
 
@@ -587,6 +686,79 @@
 
 
 
+
+
+
+    <div class="cd-section" id="features">
+
+      <div class="container">
+
+        <!--     *********     FEATURES 3      *********      -->
+
+        <div class="features-3">
+          <div class="row">
+            <div class="col-md-5">
+              <div class="facebook-embed">
+
+
+                <div class="fb-page" style="width: auto;" data-href="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal"
+                  data-tabs="events" data-small-header="false" data-adapt-container-width="true" data-hide-cover="true"
+                  data-show-facepile="true">
+                  <blockquote cite="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal" class="fb-xfbml-parse-ignore">
+                    <a href="https://www.facebook.com/pg/sunmihall/events/?ref=page_internal">英会話のサンミハール　Sun Mihall Language Service</a>
+                  </blockquote>
+                </div>
+
+
+
+              </div>
+            </div>
+            <div class="col-md-7">
+
+              <br /><br />
+              <!-- Some <br /> tags to push the text to align with the image, you can remove it if you have more text on the right side :-) -->
+
+              <h2 class="title">Upcoming Events</h2>
+
+              <div class="info info-horizontal">
+                <div class="icon icon-primary">
+                  <i class="material-icons">chat_bubble_outline</i>
+                </div>
+                <div class="description">
+                  <h4 class="info-title">Free Conversation</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque magni sequi amet consectetur!
+                    Molestiae autem tempore aliquid adipisci minus beatae accusamus, repudiandae assumenda
+                    asperiores totam architecto, dolores deleniti necessitatibus esse.</p>
+                </div>
+              </div>
+
+              <div class="info info-horizontal">
+                <div class="icon icon-primary">
+                  <i class="material-icons">calendar_today</i>
+                </div>
+                <div class="description">
+                  <h4 class="info-title">School Events</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptates magnam illo
+                    animi, beatae perspiciatis temporibus nostrum. Cum vel aliquam, aperiam consequuntur,
+                    dicta, tempore non cumque reiciendis explicabo temporibus praesentium!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <!--     *********    END FEATURES 3      *********      -->
+
+      </div>
+      <!-- container -->
+
+    </div>
+
+
+
+
+    <hr>
 
 
 
@@ -715,6 +887,8 @@
           </div>
         </div>
 
+        <a href="#" class="btn btn-primary">ネイティブ講師紹介</a>
+
       </div>
     </div>
     <!-- container -->
@@ -793,7 +967,11 @@
                       </div>
                       <div class="description">
                         <h5 class="info-title">Give us a ring</h5>
-                        <p> Michael Jordan<br> +40 762 321 762<br> Mon - Fri, 8:00-22:00
+                        <p>
+                          TEL：078-331-3035
+                          <br> 平日/AM11:30～PM8:30
+                          <br> 土曜/AM10:00～PM7:00
+                          <br> 受付は12:30～、平日はPM8:00まで、土曜はPM6:00まで。日祝休）
                         </p>
                       </div>
                     </div>
@@ -805,7 +983,10 @@
                       </div>
                       <div class="description">
                         <h5 class="info-title">Find us at the office</h5>
-                        <p> Bld Mihail Kogalniceanu, nr. 8,<br> 7652 Bucharest,<br> Romania
+                        <p>
+                          サンミハールランゲージサービス
+                          <br> 〒650-0021
+                          <br> 神戸市中央区三宮町1-4-13YSビル4F
                         </p>
                       </div>
                     </div>
@@ -857,7 +1038,10 @@
 
 
         <div id="contactUs2Map" class="custom-map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d52487.26202897336!2d135.19267358540992!3d34.69373040457312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjp!4v1536624732910"
+          <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d52487.26202897336!2d135.19267358540992!3d34.69373040457312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjp!4v1536624732910"
+            width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6734.127239094919!2d135.19249769089447!3d34.690585869495564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008efb6fd98e19%3A0x76b91a66816d2100!2z44K144Oz44Of44OP44O844Or44Op44Oz44Ky44O844K444K144O844OT44K5!5e0!3m2!1sen!2sjp!4v1536725604295"
             width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
