--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 
-  <nav class="navbar navbar-danger navbar-transparent navbar-absolute">
+  <nav class="navbar navbar-default navbar-transparent navbar-fixed-top navbar-color-on-scroll">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -55,7 +55,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../presentation.html">Sun Mihall</a>
+        <a class="navbar-brand" href="index.html">
+          <img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="Sun Mihall Logo" height="120%" width="auto">
+        </a>
       </div>
 
       <div class="collapse navbar-collapse">
@@ -960,30 +962,30 @@
               </div>
               <div class="card-content">
                 <div class="row">
-                  <div class="col-sm-6">
+                  <div class="col-sm-6 tight-col">
                     <div class="info info-horizontal">
-                      <div class="icon icon-info">
+                      <div class="icon icon-info icon-small">
                         <i class="material-icons">phone</i>
                       </div>
                       <div class="description">
                         <h5 class="info-title">Give us a ring</h5>
-                        <p>
+                        <p class="map-contact-info">
                           TEL：078-331-3035
                           <br> 平日/AM11:30～PM8:30
                           <br> 土曜/AM10:00～PM7:00
-                          <br> 受付は12:30～、平日はPM8:00まで、土曜はPM6:00まで。日祝休）
+                          <br> (受付は12:30～、平日はPM8:00まで、土曜はPM6:00まで。日祝休）
                         </p>
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-sm-6 tight-col">
                     <div class="info info-horizontal">
-                      <div class="icon icon-info">
+                      <div class="icon icon-info icon-small">
                         <i class="material-icons">pin_drop</i>
                       </div>
                       <div class="description">
                         <h5 class="info-title">Find us at the office</h5>
-                        <p>
+                        <p class="map-contact-info">
                           サンミハールランゲージサービス
                           <br> 〒650-0021
                           <br> 神戸市中央区三宮町1-4-13YSビル4F
@@ -1205,19 +1207,20 @@
 <script src="assets/js/moment.min.js"></script>
 
 <!--	Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/   -->
-<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
+<!-- <script src="assets/js/nouislider.min.js" type="text/javascript"></script> -->
 
 <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker   -->
 <script src="assets/js/bootstrap-datetimepicker.js" type="text/javascript"></script>
 
 <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select   -->
-<script src="assets/js/bootstrap-selectpicker.js" type="text/javascript"></script>
+<!-- <script src="assets/js/bootstrap-selectpicker.js" type="text/javascript"></script> -->
 
 <!--	Plugin for Tags, full documentation here: http://xoxco.com/projects/code/tagsinput/   -->
+<!-- THIS IS REQUIRED FOR NAVBAR??? -->
 <script src="assets/js/bootstrap-tagsinput.js"></script>
 
 <!--	Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput   -->
-<script src="assets/js/jasny-bootstrap.min.js"></script>
+<!-- <script src="assets/js/jasny-bootstrap.min.js"></script> -->
 
 <!--    Plugin For Google Maps   -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
@@ -1226,5 +1229,6 @@
 <script src="assets/js/material-kit.js?v=1.2.1" type="text/javascript"></script>
 
 <script src="assets/js/totd.js" type="text/javascript"></script>
+<script src="assets/js/logo-color.js" type="text/javascript"></script>
 
 </html>
