--- a/lesson-course.html
+++ b/lesson-course.html
@@ -28,7 +28,7 @@
 
 <body class="blog-posts">
 
-	<nav class="navbar navbar-primary navbar-transparent navbar-absolute">
+	<nav class="navbar navbar-default navbar-transparent navbar-fixed-top navbar-color-on-scroll">
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
@@ -38,7 +38,9 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="../presentation.html">Sun Mihall</a>
+				<a class="navbar-brand" href="index.html">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="Sun Mihall Logo" height="120%" width="auto">
+				</a>
 			</div>
 
 			<div class="collapse navbar-collapse">
@@ -692,24 +694,28 @@
 <script src="assets/js/moment.min.js"></script>
 
 <!--	Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/   -->
-<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
+<!-- <script src="assets/js/nouislider.min.js" type="text/javascript"></script> -->
 
 <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker   -->
 <script src="assets/js/bootstrap-datetimepicker.js" type="text/javascript"></script>
 
 <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select   -->
-<script src="assets/js/bootstrap-selectpicker.js" type="text/javascript"></script>
+<!-- <script src="assets/js/bootstrap-selectpicker.js" type="text/javascript"></script> -->
 
 <!--	Plugin for Tags, full documentation here: http://xoxco.com/projects/code/tagsinput/   -->
+<!-- THIS IS REQUIRED FOR NAVBAR??? -->
 <script src="assets/js/bootstrap-tagsinput.js"></script>
 
 <!--	Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput   -->
-<script src="assets/js/jasny-bootstrap.min.js"></script>
+<!-- <script src="assets/js/jasny-bootstrap.min.js"></script> -->
 
 <!--    Plugin For Google Maps   -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 
 <!--    Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc    -->
 <script src="assets/js/material-kit.js?v=1.2.1" type="text/javascript"></script>
+
+<script src="assets/js/totd.js" type="text/javascript"></script>
+<script src="assets/js/logo-color.js" type="text/javascript"></script>
 
 </html>
