Add nav links and some Japanese content

--- a/index.html
+++ b/index.html
@@ -62,6 +62,63 @@
 
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
+
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="material-icons">view_day</i> School
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu dropdown-with-icons">
+              <li>
+                <a href="index.html">
+                  <i class="material-icons">home</i> Home
+                </a>
+              </li>
+              <li>
+                <a href="#features">
+                  <i class="material-icons">view_list</i> Features
+                </a>
+              </li>
+              <li>
+                <a href="#campaign">
+                  <i class="material-icons">star</i> Current Campaign
+                </a>
+              </li>
+              <li>
+                <a href="#pricing">
+                  <i class="material-icons">school</i> Lessons
+                </a>
+              </li>
+              <li>
+                <a href="#new-students">
+                  <i class="material-icons">person_add</i> New Students
+                </a>
+              </li>
+              <li>
+                <a href="#testimonials">
+                  <i class="material-icons">chat</i> Testimonials
+                </a>
+              </li>
+              <li>
+                <a href="#events">
+                  <i class="material-icons">event</i> Events
+                </a>
+              </li>
+              <li>
+                <a href="#team">
+                  <i class="material-icons">people</i> Our Team
+                </a>
+              </li>
+              <li>
+                <a href="#contactus">
+                  <i class="material-icons">call</i> Contact
+                </a>
+              </li>
+
+            </ul>
+          </li>
+
           <li>
             <a href="lesson-course.html">
               <i class="material-icons">apps</i> Lesson Course
@@ -193,14 +250,12 @@
   </nav>
 
 
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('../assets/img/bg8.jpg');">
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg8.jpg');">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="title">Your Story Starts With Us.</h1>
-          <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, esse, officia? Numquam
-            adipisci quod odio ducimus, eos. Rem, magnam quod consequuntur similique eligendi et, labore,
-            aspernatur id nam dignissimos, optio.</h4>
+          <h1 class="title">目標を達成できる英会話スクール</h1>
+          <h4>今の勉強法やスクールで満足ですか？</h4>
           <br />
           <a href="https://www.youtube.com/watch?v=aSdQn2mFn1I" target="_blank" class="btn btn-danger btn-raised btn-lg">
             <i class="fa fa-play"></i> Watch video
@@ -212,7 +267,7 @@
 
   <div class="main main-raised">
     <div class="container">
-      <div class="section text-center">
+      <div id="features" class="section text-center">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h2 class="title">Topic of the day</h2>
@@ -259,7 +314,7 @@
             </div>
           </div>
           <div class="row">
-            <a href="#pablo" class="btn btn-primary btn-lg">
+            <a href="#" class="btn btn-primary btn-lg">
               See our lessons
             </a>
           </div>
@@ -276,7 +331,7 @@
 
 
     <div class="container">
-      <div class="cd-section text-center" id="projects">
+      <div class="cd-section text-center" id="campaign">
         <div class="projects-4" id="projects-4">
           <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center">
@@ -294,7 +349,7 @@
               <div class="card card-no-shadow-background" style="background-image: url('assets/img/examples/card-project2.jpg')">
                 <div class="card-content">
                   <!-- <label class="label label-rose">Client: Apple</label>
-              <a href="#pablo">
+              <a href="#">
                 <h3 class="card-title">Beautiful Project</h3>
               </a>
               <p class="card-description">
@@ -351,7 +406,7 @@
 
       <!--     *********    PRICING 5     *********      -->
 
-      <div class="pricing-5 section-gray" id="pricing-5">
+      <div class="pricing-5 section-gray" id="pricing-5 lessons">
 
         <div class="container">
           <div class="row">
@@ -360,7 +415,7 @@
               <ul class="nav nav-pills" role="tablist">
                 <li class="active">
                   <a href="#personal" role="tab" data-toggle="tab">
-                    Private
+                    Private/Web
                   </a>
                 </li>
                 <li>
@@ -378,7 +433,7 @@
               <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quo ducimus illo beatae
                 at eos eum, qui nulla distinctio omnis mollitia reprehenderit sunt. Eligendi eius iure
                 totam reprehenderit laboriosam, veniam.</p>
-              <a href="#pablo" class="btn btn-primary margin-top-small">
+              <a href="#" class="btn btn-primary margin-top-small">
                 Click here for more plans
               </a>
             </div>
@@ -398,7 +453,7 @@
                           <li><b>##</b> ###</li>
                           <li><b>##</b> ###</li>
                         </ul>
-                        <a href="#pablo" class="btn btn-primary btn-round">
+                        <a href="#" class="btn btn-primary btn-round">
                           Contact
                         </a>
                       </div>
@@ -416,7 +471,7 @@
                           <li><b>##</b> ###</li>
                           <li><b>##</b> ###</li>
                         </ul>
-                        <a href="#pablo" class="btn btn-white btn-round">
+                        <a href="#" class="btn btn-white btn-round">
                           Contact
                         </a>
                       </div>
@@ -437,7 +492,7 @@
                           <li><b>##</b> ###</li>
                           <li><b>##</b> ###</li>
                         </ul>
-                        <a href="#pablo" class="btn btn-primary btn-round">
+                        <a href="#" class="btn btn-primary btn-round">
                           Contact
                         </a>
                       </div>
@@ -455,7 +510,7 @@
                           <li><b>##</b> ###</li>
                           <li><b>##</b> ###</li>
                         </ul>
-                        <a href="#pablo" class="btn btn-primary btn-round">
+                        <a href="#" class="btn btn-primary btn-round">
                           Contact
                         </a>
                       </div>
@@ -476,7 +531,7 @@
                           <li><b>##</b> ###</li>
                           <li><b>##</b> ###</li>
                         </ul>
-                        <a href="#pablo" class="btn btn-primary btn-round">
+                        <a href="#" class="btn btn-primary btn-round">
                           Contact
                         </a>
                       </div>
@@ -494,7 +549,7 @@
                           <li><b>##</b> ###</li>
                           <li><b>##</b> ###</li>
                         </ul>
-                        <a href="#pablo" class="btn btn-primary btn-round">
+                        <a href="#" class="btn btn-primary btn-round">
                           Contact
                         </a>
                       </div>
@@ -524,7 +579,7 @@
 
 
 
-    <div class="cd-section" id="blogs">
+    <div class="cd-section" id="new-students">
 
       <!--     *********    BLOGS 4      *********      -->
 
@@ -540,7 +595,7 @@
 
               <div class="card card-plain card-blog">
                 <div class="card-image">
-                  <a href="#pablo">
+                  <a href="#">
                     <img class="img img-raised" src="assets/img/bg5.jpg" />
                   </a>
                 </div>
@@ -562,7 +617,7 @@
 
               <!-- <div class="card card-plain card-blog">
                 <div class="card-image">
-                  <a href="#pablo">
+                  <a href="#">
                     <img class="img img-raised" src="assets/img/examples/blog6.jpg" />
                   </a>
                 </div>
@@ -570,7 +625,7 @@
                 <h6 class="category text-success">Lifestyle</h6>
 
                 <h3 class="card-title">
-                  <a href="#pablo">We will breathe clean air and exercise</a>
+                  <a href="#">We will breathe clean air and exercise</a>
                 </h3>
 
                 <h5 class="card-description">
@@ -580,7 +635,7 @@
                   to go number 1 off of streaming...
                 </h5>
 
-                <a href="#pablo" class="btn btn-primary btn-round"> Read More</a>
+                <a href="#" class="btn btn-primary btn-round"> Read More</a>
               </div> -->
 
             </div>
@@ -691,7 +746,7 @@
 
 
 
-    <div class="cd-section" id="features">
+    <div class="cd-section" id="events">
 
       <div class="container">
 
@@ -766,7 +821,7 @@
 
 
     <div class="container">
-      <div class="section text-center">
+      <div id="team" class="section text-center">
         <h2 class="title">Here is our team</h2>
 
         <div class="team">
@@ -775,7 +830,7 @@
               <div class="card card-profile card-plain">
                 <div class="col-md-5">
                   <div class="card-image">
-                    <a href="#pablo">
+                    <a href="#">
                       <img class="img" src="assets/img/faces/card-profile1-square.jpg" />
                     </a>
                   </div>
@@ -800,7 +855,7 @@
               <div class="card card-profile card-plain">
                 <div class="col-md-5">
                   <div class="card-image">
-                    <a href="#pablo">
+                    <a href="#">
                       <img class="img" src="assets/img/faces/card-profile6-square.jpg" />
                     </a>
                   </div>
@@ -818,16 +873,16 @@
                     </p>
 
                     <!-- <div class="footer">
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-linkedin">
+                      <a href="#" class="btn btn-just-icon btn-simple btn-linkedin">
                         <i class="fa fa-linkedin"></i>
                       </a>
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-facebook">
+                      <a href="#" class="btn btn-just-icon btn-simple btn-facebook">
                         <i class="fa fa-facebook-square"></i>
                       </a>
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-dribbble">
+                      <a href="#" class="btn btn-just-icon btn-simple btn-dribbble">
                         <i class="fa fa-dribbble"></i>
                       </a>
-                      <a href="#pablo" class="btn btn-just-icon btn-simple btn-google">
+                      <a href="#" class="btn btn-just-icon btn-simple btn-google">
                         <i class="fa fa-google"></i>
                       </a>
                     </div> -->
@@ -840,7 +895,7 @@
               <div class="card card-profile card-plain">
                 <div class="col-md-5">
                   <div class="card-image">
-                    <a href="#pablo">
+                    <a href="#">
                       <img class="img" src="assets/img/faces/card-profile2-square.jpg" />
                     </a>
                   </div>
@@ -865,7 +920,7 @@
               <div class="card card-profile card-plain">
                 <div class="col-md-5">
                   <div class="card-image">
-                    <a href="#pablo">
+                    <a href="#">
                       <img class="img" src="assets/img/faces/card-profile4-square.jpg" />
                     </a>
                   </div>
