--- a/lesson-course.html
+++ b/lesson-course.html
@@ -175,7 +175,7 @@
 		</div>
 	</nav>
 
-	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('../assets/img/bg10.jpg');">
+	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/bg10.jpg');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -290,7 +290,7 @@
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<a href="#pablo">
+											<a href="#">
 												<h3 class="card-title">プライベートレッスン（マンツマン）</h3>
 											</a>
 											<!-- <p class="card-description">
@@ -330,7 +330,7 @@
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<a href="#pablo">
+											<a href="#">
 												<h3 class="card-title">セミプライベートレッスン</h3>
 											</a>
 											<!-- <p class="card-description">
@@ -370,7 +370,7 @@
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<a href="#pablo">
+											<a href="#">
 												<h3 class="card-title">フリーカンバセーション</h3>
 											</a>
 											<!-- <p class="card-description">
@@ -410,7 +410,7 @@
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<a href="#pablo">
+											<a href="#">
 												<h3 class="card-title">グループレッスン</h3>
 											</a>
 											<!-- <p class="card-description">
@@ -450,7 +450,7 @@
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<a href="#pablo">
+											<a href="#">
 												<h3 class="card-title">オンラインレッスン</h3>
 											</a>
 											<!-- <p class="card-description">
@@ -490,7 +490,7 @@
 								<div class="card card-rotate">
 									<div class="front front-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<a href="#pablo">
+											<a href="#">
 												<h3 class="card-title">出張レッスン</h3>
 											</a>
 											<!-- <p class="card-description">
@@ -524,8 +524,8 @@
 						</div>
 
 						<div class="col-sm-12 text-center" style="margin-top: 30px;">
-							<a href="#" class="btn btn-primary" style="margin-right: 30px;">Lesson Courses</a>
-							<a href="#" class="btn btn-primary">Pricing and Schedule</a>
+							<a style="width: 200px;" href="#" class="btn btn-primary" style="margin-right: 30px;">Lesson Courses</a>
+							<a style="width: 200px;" href="#" class="btn btn-primary">Pricing and Schedule</a>
 						</div>
 
 
@@ -601,32 +601,32 @@
 
 	<!-- <footer class="footer">
 		<div class="container">
-			<a class="footer-brand" href="#pablo">Material Kit PRO</a>
+			<a class="footer-brand" href="#">Material Kit PRO</a>
 
 
 			<ul class="pull-center">
 				<li>
-					<a href="#pablo">
+					<a href="#">
 						Blog
 					</a>
 				</li>
 				<li>
-					<a href="#pablo">
+					<a href="#">
 						Presentation
 					</a>
 				</li>
 				<li>
-					<a href="#pablo">
+					<a href="#">
 						Discover
 					</a>
 				</li>
 				<li>
-					<a href="#pablo">
+					<a href="#">
 						Payment
 					</a>
 				</li>
 				<li>
-					<a href="#pablo">
+					<a href="#">
 						Contact Us
 					</a>
 				</li>
