--- a/index.html
+++ b/index.html
@@ -66,182 +66,209 @@
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <i class="material-icons">view_day</i> School
+              ホーム
               <b class="caret"></b>
             </a>
-            <ul class="dropdown-menu dropdown-with-icons">
+            <ul class="dropdown-menu">
               <li>
                 <a href="index.html">
-                  <i class="material-icons">home</i> Home
+                  Home
                 </a>
               </li>
               <li>
                 <a href="#features">
-                  <i class="material-icons">view_list</i> Features
+                  Features
                 </a>
               </li>
               <li>
                 <a href="#campaign">
-                  <i class="material-icons">star</i> Current Campaign
+                  Current Campaign
                 </a>
               </li>
               <li>
                 <a href="#pricing">
-                  <i class="material-icons">school</i> Lessons
+                  Lessons
                 </a>
               </li>
               <li>
                 <a href="#new-students">
-                  <i class="material-icons">person_add</i> New Students
+                  New Students
                 </a>
               </li>
               <li>
                 <a href="#testimonials">
-                  <i class="material-icons">chat</i> Testimonials
+                  Testimonials
                 </a>
               </li>
               <li>
                 <a href="#events">
-                  <i class="material-icons">event</i> Events
+                  Events
                 </a>
               </li>
               <li>
                 <a href="#team">
-                  <i class="material-icons">people</i> Our Team
+                  Our Team
                 </a>
               </li>
               <li>
                 <a href="#contactus">
-                  <i class="material-icons">call</i> Contact
+                  Contact
                 </a>
               </li>
-
             </ul>
           </li>
+
+
+
+
+
+
+
+
+
 
           <li>
             <a href="lesson-course.html">
-              <i class="material-icons">apps</i> Lesson Course
+              レッスンコース
             </a>
           </li>
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <i class="material-icons">view_day</i> Link 2
+              目的別の英会話レッスン
               <b class="caret"></b>
             </a>
-            <ul class="dropdown-menu dropdown-with-icons">
+            <ul class="dropdown-menu">
               <li>
                 <a href="#">
-                  <i class="material-icons">dns</i> sub-link
+                  日常英会話
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">build</i> sub-link
+                  ビジネス英会話
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">list</i> sub-link
+                  TOEIC・英検
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">people</i> sub-link
+                  TOEFL・IELTS
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">assignment</i> sub-link
+                  医療英会話
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">monetization_on</i> sub-link
+                  企業内語学研修
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">chat</i> sub-link
+                  英文校正サービス
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">call</i> sub-link
+                  海外赴任準備
                 </a>
               </li>
-
+              <li>
+                <a href="#">
+                  航空英語・ICAO対策
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  留学準備
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  帰国子女
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  子供英会話
+                </a>
+              </li>
             </ul>
           </li>
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <i class="material-icons">view_carousel</i> Link 3
+              Link 3
               <b class="caret"></b>
             </a>
             <ul class="dropdown-menu dropdown-with-icons">
               <li>
                 <a href="#">
-                  <i class="material-icons">account_balance</i> sub-link
+                  sub-link
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">art_track</i> sub-link
+                  sub-link
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">view_quilt</i> sub-link
+                  sub-link
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">location_on</i> sub-link
+                  sub-link
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">view_day</i> sub-link
+                  sub-link
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">fingerprint</i> sub-link
+                  sub-link
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">attach_money</i> sub-link
+                  sub-link
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">shop</i> sub-link
+                  sub-link
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">beach_access</i> sub-link
+                  sub-link
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">account_circle</i> sub-link
+                  sub-link
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="material-icons">person_add</i> sub-link
+                  sub-link
                 </a>
               </li>
             </ul>
           </li>
 
           <li>
-            <a href="#" target="_blank" class="btn btn-white btn-simple">
-              <i class="material-icons">shopping_cart</i> Link 4
+            <a href="#contactus" target="" class="btn btn-white btn-simple">
+              お問い合わせ
             </a>
           </li>
         </ul>
@@ -270,7 +297,7 @@
       <div id="features" class="section text-center">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <h2 class="title">Topic of the day</h2>
+            <h2 class="title">Daily Theme</h2>
             <h2 id="totd-textbox"></h2>
           </div>
         </div>
@@ -1013,7 +1040,7 @@
           <div class="card card-contact">
             <form role="form" id="contact-form" method="post">
               <div class="header header-raised header-blue text-center">
-                <h4 class="card-title">Contact Us</h4>
+                <h4 class="card-title">お問い合わせ</h4>
               </div>
               <div class="card-content">
                 <div class="row">
@@ -1052,24 +1079,24 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group label-floating">
-                      <label class="control-label">First name</label>
-                      <input type="text" name="name" class="form-control">
+                      <label class="control-label">お名前</label>
+                      <input type="text" name="name" class="form-control" required>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group label-floating">
-                      <label class="control-label">Last name</label>
-                      <input type="text" name="name" class="form-control">
+                      <label class="control-label">電話番号</label>
+                      <input type="text" name="phone" class="form-control" required>
                     </div>
                   </div>
                 </div>
                 <div class="form-group label-floating">
-                  <label class="control-label">Email address</label>
-                  <input type="email" name="email" class="form-control" />
+                  <label class="control-label">メールアドレス</label>
+                  <input type="email" name="email" class="form-control" required>
                 </div>
                 <div class="form-group label-floating">
-                  <label class="control-label">Your message</label>
-                  <textarea name="message" class="form-control" id="message" rows="6"></textarea>
+                  <label class="control-label">お問い合わせ内容</label>
+                  <textarea name="message" class="form-control" id="message" rows="6" required></textarea>
                 </div>
 
                 <div class="row">
@@ -1082,7 +1109,9 @@
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary pull-right">Send Message</button>
+                    <button type="submit" class="btn btn-primary pull-right">送信
+                      <i class="material-icons pull-right" style="margin-left: 10px;">send</i>
+                    </button>
                   </div>
                 </div>
               </div>
