--- a/lesson-course.html
+++ b/lesson-course.html
@@ -524,7 +524,7 @@
 						</div>
 
 						<div class="col-sm-12 text-center" style="margin-top: 30px;">
-							<a style="width: 200px;" href="#" class="btn btn-primary" style="margin-right: 30px;">Lesson Courses</a>
+							<a style="width: 200px;" href="lesson-course-info.html" class="btn btn-primary" style="margin-right: 30px;">Lesson Courses</a>
 							<a style="width: 200px;" href="#" class="btn btn-primary">Pricing and Schedule</a>
 						</div>
 
